able to add question as completed

--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -12,6 +12,8 @@
         <h3 class="font-weight-bold text-center dark-grey-text pb-2">categories</h3>
         <hr class="w-header my-4">
         <div class="row d-flex justify-content-center">
+
+            {{!-- Beginning of Friendship --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">
                         Friendship</a>
@@ -23,7 +25,11 @@
                     </button>
                 </a>
             </div>
+            {{!-- End of Friendship --}}
+
             <br />
+
+            {{!-- Beginning of Work --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-secondary pt-4 mb-4"><a class="dark-grey-text" href="#">Work</a></h5>
                 <i class="far fa-map fa-3x pink-text mb-4"></i><br />
@@ -33,7 +39,11 @@
                     </button>
                 </a>
             </div>
+            {{!-- End of Work --}}
+
             <br /><br />
+
+            {{!-- Beginning of Family --}}
             <div class="w-100"></div><br />
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Family</a></h5>
@@ -44,7 +54,11 @@
                     </button>
                 </a>
             </div>
+            {{!-- End of Family --}}
+
             <br />
+
+            {{!-- Beginning of Love --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Love{{information.friend_id}}</h5>
                 <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
@@ -54,6 +68,20 @@
                     </button>
                 </a>
             </div>
+            {{!-- End of Love --}}
+
+            {{!-- Beginning of Favorite --}}
+            <div class="text-center col-md-6 col-lg-5 col-xl-4">
+                <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Favorites</h5>
+                <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
+                <a class="dark-grey-text" href="/play/favorites/{{information.user_id}}/{{information.friend_id}}">
+                    <button type="button" class="btn btn-outline-dark waves-effect">
+                        converse
+                    </button>
+                </a>
+            </div>
+            {{!-- End of Love --}}
+
         </div>
     </section>
     <!-- Section -->
