going go try to implement authentication

--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -1,3 +1,11 @@
+<nav class="navbar sticky-top navbar-light blue lighten-4">
+
+    <a href="/home/{{information.user_id}}">
+        <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Play with another friend
+        </button>
+    </a>
+</nav>
+
 <div class="container z-depth-1 my-5 py-5">
     <!-- Section -->
     <section>
