--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -1,64 +1,61 @@
-
 <nav class="navbar sticky-top navbar-light blue lighten-4">
 
-<a href="/categories/{{user_id}}/{{friend_id}}">
-<button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Pick another category
-            </button>
-             </a>
+    <a href="/categories/{{user_id}}/{{friend_id}}">
+        <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Pick another category
+        </button>
+    </a>
 </nav>
-<a href="">
-  {{#each question}}
+    {{#each question}}
 
-  <!--Section: Content-->
-  <section class="text-center">
+        <!--Section: Content-->
+        <section class="text-center">
 
-      <style>
-        @media (max-width: 767px) {
-          .social-buttons .btn {
-            padding: 8px 15px;
-            margin: 1px;
-          }
-        }
-      </style>
+            <style>
+                @media (max-width: 767px) {
+                    .social-buttons .btn {
+                        padding: 8px 15px;
+                        margin: 1px;
+                    }
+                }
+            </style>
 
-      <!-- Featured image -->
-      <img src="https://www.cerclemagazine.com/wp-content/uploads/2017/10/316_N-Atlantic-Ocean-Cliffs-of-Moher-1989.jpg" class="img-fluid z-depth-1 rounded mb-4"
-        alt="">
+            <!-- Featured image -->
+            <img src="https://www.cerclemagazine.com/wp-content/uploads/2017/10/316_N-Atlantic-Ocean-Cliffs-of-Moher-1989.jpg" class="img-fluid z-depth-1 rounded mb-4" alt="">
 
-      <p class="mb-4">
-         {{this.question_string}}
-      </p>
+            <p class="mb-4">
+                {{this.question_string}}
+            </p>
 
-      <!-- Interactions -->
-      <div class="social-buttons smooth-scroll">
-       {{!-- Submit form --}}
-  
-        <div >
-            <form id="favQuestionForm" > 
-            <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
-             <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
-             <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
-        <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Favorite
-                    </button>
+            <!-- Interactions -->
+            <div class="row">
+                {{!-- Submit form --}}
+
+                <div class="col">
+                    <form id="favQuestionForm">
+                        <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
+                        <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
+                        <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
+                        <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Favorite
+                        </button>
                     </form>
-        </div>
+                </div>
 
-            <div >
-            <form id="markAsDone" > 
-            <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
-             <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
-             <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
-        <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Mask as Done
-                    </button>
+                <div class="col">
+                    <form id="markAsDone">
+                        <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
+                        <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
+                        <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
+                        <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Mask as Done
+                        </button>
                     </form>
-        </div>
-      </div>
-      <!-- Interactions -->
-      
-
-    </section>
-  <!--Section: Content-->
+                </div>
+            </div>
+            <!-- Interactions -->
 
 
-</div><br/><br/>
- {{/each}}
+        </section>
+        <!--Section: Content-->
+
+
+        </div><br /><br />
+    {{/each}}
