add friend works

--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -57,7 +57,7 @@
                <!--Grid column-->
                <!--Grid column-->
                <div class="col-md-6 col-xl-5 mb-4">
-                   <form action="/{{id}}/addfriendform" method="POST">
+                   <form action="/addfriend/{{user_id}}" method="POST">
                    
                      <div class="card wow fadeInRight" data-wow-delay="0.3s">
                         <div class="card-body z-depth-2">
