--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -68,7 +68,7 @@
 
             {{!-- Beginning of Love --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
-                <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Love{{information.friend_id}}</h5>
+                <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Love</h5>
                 <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
                 <a class="dark-grey-text" href="/play/love/{{information.user_id}}/{{information.friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
@@ -82,7 +82,7 @@
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Favorites</h5>
                 <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
-                <a class="dark-grey-text" href="/play/favorites/{{information.user_id}}/{{information.friend_id}}">
+                <a class="dark-grey-text" href="/favorites/{{information.user_id}}/{{information.friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
                     </button>
