--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -5,6 +5,47 @@
         </button>
     </a>
 </nav>
+
+
+{{!-- JUMBOTRON BEGINNING --}}
+<div class="container my-5 py-5 z-depth-1">
+
+
+  <!--Section: Content-->
+  <section class="dark-grey-text text-center">
+    
+    <h3 class="font-weight-bold pt-4 mb-4">How to Play</h3>
+    
+    <h5 class="font-weight-bold font-italic mb-5">Description here about purpose of game</h5>
+
+    <div class="row mx-lg-5 mx-md-3">
+      <div class="col-md-6 mb-4">
+        
+        <div class="view mb-5">
+          <img src="https://mdbootstrap.com/img/illustrations/undraw_grand_slam_0q5r.svg" class="img-fluid" alt="smaple image">
+        </div>
+
+        <h5 class="font-weight-normal text-muted">Quote here .</h5>
+
+     	</div>
+     	<div class="col-md-6 mb-4">
+        
+        <div class="view mb-5">
+          <img src="https://mdbootstrap.com/img/illustrations/undraw_basketball_agx4.png" class="img-fluid" alt="smaple image">
+        </div>
+
+        <h5 class="font-weight-normal text-muted">Second quote here.</h5>
+
+      </div>
+    </div>
+
+  </section>
+  <!--Section: Content-->
+
+
+</div>
+
+{{!-- JUMBOTRON ENDING --}}
     {{#each question}}
 
         <!--Section: Content-->
@@ -31,7 +72,7 @@
                 {{!-- Submit form --}}
 
                 <div class="col">
-                    <form id="favQuestionForm">
+                    <form id="favQuestionForm" method="POST">
                         <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
                         <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
                         <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
@@ -41,11 +82,11 @@
                 </div>
 
                 <div class="col">
-                    <form id="markAsDone">
+                    <form id="markAsDone" method="POST">
                         <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
                         <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
                         <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
-                        <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Mask as Done
+                        <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Add Point
                         </button>
                     </form>
                 </div>
