--- a/views/question/categories.handlebars
+++ b/views/question/categories.handlebars
@@ -80,7 +80,7 @@
 
             {{!-- Beginning of Favorite --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
-                <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Favorites</h5>
+                <h5 class="font-weight-normal border-top border-light pt-4 mb-4">All my favorite questions</h5>
                 <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
                 <a class="dark-grey-text" href="/favorites/{{information.user_id}}/{{information.friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
