Able to print out name on categories page

--- a/views/question/categories.handlebars
+++ b/views/question/categories.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-light blue lighten-4">
 
-    <a href="/home/{{information.user_id}}">
+    <a href="/home/{{user_id}}">
         <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Play with another friend
         </button>
     </a>
@@ -17,7 +17,7 @@
         <h6 class="text-center small mb-4">
             <p class="text-muted pb-md-3">let's talk</p>
         </h6>
-        <h3 class="font-weight-bold text-center dark-grey-text pb-2">categories</h3>
+        <h3 class="font-weight-bold text-center dark-grey-text pb-2">{{friend_name}}</h3>
         <hr class="w-header my-4">
         <div class="row d-flex justify-content-center">
 
@@ -27,7 +27,7 @@
                         Friendship</a>
                 </h5>
                 <i class="fa fa-map-marker-alt fa-3x indigo-text mb-4"></i><br />
-                <a class="dark-grey-text" href="/play/friends/{{information.user_id}}/{{information.friend_id}}">
+                <a class="dark-grey-text" href="/play/friends/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
                     </button>
@@ -41,7 +41,7 @@
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-secondary pt-4 mb-4"><a class="dark-grey-text" href="#">Work</a></h5>
                 <i class="far fa-map fa-3x pink-text mb-4"></i><br />
-                <a class="dark-grey-text" href="/play/work/{{information.user_id}}/{{information.friend_id}}">
+                <a class="dark-grey-text" href="/play/work/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
                     </button>
@@ -56,7 +56,7 @@
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Family</a></h5>
                 <i class="fa fa-globe-africa fa-3x amber-text mb-4"></i><br />
-                <a class="dark-grey-text" href="/play/family/{{information.user_id}}/{{information.friend_id}}">
+                <a class="dark-grey-text" href="/play/family/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
                     </button>
@@ -70,7 +70,7 @@
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Love</h5>
                 <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
-                <a class="dark-grey-text" href="/play/love/{{information.user_id}}/{{information.friend_id}}">
+                <a class="dark-grey-text" href="/play/love/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
                     </button>
@@ -82,7 +82,7 @@
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4">All my favorite questions</h5>
                 <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
-                <a class="dark-grey-text" href="/favorites/{{information.user_id}}/{{information.friend_id}}">
+                <a class="dark-grey-text" href="/favorites/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
                     </button>
